--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,23 +12,35 @@ permissions:
 
 jobs:
   release:
+    # verhindert Endlosschleifen durch semantic-release selbst
     if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Repository auschecken (mit Tags & History)
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      # 2. Node.js EXPLIZIT auf 20 setzen
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20.x'
+          check-latest: true
 
+      # 3. Sicherheits-Debug (wichtig!)
+      - name: Debug Node & npm versions
+        run: |
+          node -v
+          npm -v
+
+      # 4. Dependencies installieren
       - name: Install dependencies
         run: npm ci
 
+      # 5. semantic-release ausführen
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
