--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types: [closed]
+    branches: [main]
 
 permissions:
   contents: write
@@ -12,8 +12,7 @@ permissions:
 
 jobs:
   release:
-    # verhindert Endlosschleifen durch semantic-release selbst
-    if: github.actor != 'github-actions[bot]'
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -22,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: main
 
       # 2. Node.js EXPLIZIT auf 20 setzen
       - name: Setup Node.js
